patch: fixed the overflowing nav-bar

--- a/css/style.css
+++ b/css/style.css
@@ -23,17 +23,18 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 75%;
+    width: 70%;
     position: relative;
-    left: 12.5%;
+    left: 15%;
     box-shadow: 0 2px 5px gray;
     padding: 5%;
+    border-radius: 10px;
 }
 .qn:hover{
     height: 350px;
     box-shadow: 0 4px 6px rgb(102, 98, 98);
-    width: 80%;
-    left: 10%;
+    width: 75%;
+    left: 12.5%;
 }
 header{
     font-size: xx-large;
